# Phi-CloudAction-python

./: .gitignore  LICENSE  Old_WebApi.md  README.md  Web_api.py  Web_api_old.py  Web_example.py  Web_example_old.py  build_exe.bat  correctSaveHistory.py  difficulty.tsv  example.py  getSave.py  index.html  main.py  main.spec  pyproject.toml  requirement.txt  uploadNickname.py  uploadSave.py  version.txt
.github/workflows/: ci.yml
GetSession/: GetPgrUserdata.py  GetSession.py  GetSession.spec  build_exe.bat  version.txt
GetSession/ADB/: build_exe.bat  build_one_exe.bat
GetSession/QRCode/: QRCodeGetToken.py  QRCodeGetToken.spec  TapTapLogin.py  build_exe.bat  build_one_exe.bat  version.txt
PhiCloudAction/: ActionLib.py  CloudAction.py  __init__.py  logger.py
PhiCloudAction/Structure/: DataType.py  __init__.py  summary.py
PhiCloudAction/_colorlog/: formatter.py  wrappers.py
PhiCloudAction/info/: difficulty.tsv
PhiCloudLib/: AES.py  ActionLib.py  BuildGameSave.py  ByteReader.py  ByteWriter.py  CloudAction.py  CloudLib.py  ErrorException.py  LibApi.py  ParseGameSave.py  __init__.py  logger.py
PhiCloudLib/Structure/: DataType.py  __init__.py  gameKey.py  gameProgress.py  settings.py  user.py
phi_cloud_action/: .env  __init__.py  __main__.py  webapi.py
phi_cloud_action/PhiCloudLib/: ActionLib.py  CloudAction.py  __init__.py  other.py
phi_cloud_action/PhiCloudLib/Structure/: DataType.py  __init__.py  gameProgress.py  settings.py
phi_cloud_action/data/: RunConfig.yml
phi_cloud_action/data/example/: archives.py  getSave.py  other.py  printB19.py  printB30.py  printNickname.py  printToken.py  update.py  update_info.py  uploadNickname.py
phi_cloud_action/data/info/: difficulty.tsv
phi_cloud_action/example/: __init__.py  archives.py  getSave.py  other.py  printB19.py  printNickname.py  uploadNickname.py
phi_cloud_action/libs/: PhiLogin.py  __init__.py
phi_cloud_action/utils/: __init__.py  get_dev_mode.py  get_env.py  get_info_dir.py
phi_cloud_action/web/api/: __init__.py  example.py  get_cloud_b30.py  get_cloud_saves.py  get_cloud_summary.py  get_saves_b30.py  get_saves_histtory.py  phi_token.py  update_info.py
phi_cloud_action/web/api/request_models/: __init__.py  (+3 more)
phi_cloud_action/web/libs/: PhiLogin.py  __init__.py
test/: example.py  get_save.py
tests/: test_main.py
