[project]
name = "phicloudaction"
version = "1.4.3"
description = "使用Python实现的Phigros云端数据操作"
authors = [{ name = "wms26", email = "qianqi26@616.sb" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pycryptodome>=3.23.0", "requests>=2.32.5"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
PhiCloudAction = ["info/*.tsv", "info/*.txt", "_colorlog/LICENSE"]
